# git-wasip2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: ci.yml
docs/: plainfeed-origin.md
examples/: git-wasip2-driver.rs  git-wasip2.rs
scripts/: serve-local-test-repo.sh  verify-smart-http-wasmtime.sh
src/: commit.rs  fetch.rs  http.rs  lib.rs  push.rs
tests/support/: git-smart-http-server.py
