[package]
name = "git-wasip2"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/enbop/git-wasip2"
description = "A bounded Smart HTTP Git client for wasm32-wasip2"

[features]
test-support = []

[dependencies]
futures-util = "0.3.31"
gix = { git = "https://github.com/enbop/gitoxide.git", rev = "283374581e2c8fa2fea28079e1f284a1b0c7fbfc", default-features = false, features = ["async-network-client", "index", "sha1", "tree-editor"] }
gix-pack = { git = "https://github.com/enbop/gitoxide.git", rev = "283374581e2c8fa2fea28079e1f284a1b0c7fbfc", default-features = false, features = ["generate", "sha1"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["tokio"] }
once_cell = "1.21.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "stream"] }
rustls-rustcrypto = "0.0.2-alpha"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["net", "rt", "time"] }
url = "2.5.8"

[dev-dependencies]
tempfile = "3.23.0"
